# shadowinvestor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PHASE_1_BUILD.md  README.md  pyproject.toml  railway.toml
config/: catalysts.yaml  risk.yaml  sectors.yaml  sources.yaml  watchlist.yaml
docs/: ARCHITECTURE.md  CLI.md  DECISION_FRAMEWORK.md  DEPLOYMENT.md  LEARNINGS.md  README.md
scripts/: railway_deploy.py  show_buys.py  wire_vercel.py
src/fesi/: __init__.py  cli.py  config.py  db.py  logging.py
src/fesi/analysis/: ta.py
src/fesi/api/: __init__.py  main.py  routes.py  schemas.py
src/fesi/decision/: __init__.py  engine.py  risk_gates.py  sizing.py
src/fesi/digest/: __init__.py  notify.py  render.py
src/fesi/execute/: __init__.py  shadow.py
src/fesi/ingest/: __init__.py  base.py  clinicaltrials.py  fda_openfda.py  http.py  perplexity.py  sec_edgar.py  wires.py
src/fesi/intelligence/: __init__.py  classifier.py  cross_ref.py  llm.py  normalize.py  scorer.py
src/fesi/migrations/: 001_initial_schema.sql
src/fesi/ml/: __init__.py
src/fesi/ops/: __init__.py  dashboard.py  pipeline.py  scheduler.py
src/fesi/store/: __init__.py  decisions.py  digests.py  outcomes.py  positions.py  prices.py  raw_items.py  research_topics.py  schema.py  signals.py  tickers.py  user_actions.py
tests/: conftest.py  test_classifier_fallback.py  test_cross_ref.py  test_decision_engine.py  test_digest_render.py  test_normalize.py  test_perplexity_adapter.py  test_pipeline_e2e.py  test_smoke.py  test_ta.py
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AddTickerForm.tsx  Nav.tsx  SellButton.tsx  SignalActionButtons.tsx  StatRow.tsx
web/src/lib/: api.ts  format.ts  (+1 more)
(+23 files in other folders)
