[project]
name = "fesi"
version = "0.0.1"
description = "Finance Early Signals & Investor — personal catalyst-driven trading signal system"
requires-python = ">=3.12"
authors = [{ name = "Fred" }]
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "click>=8.1",
    "tenacity>=9.0",

    # HTTP
    "httpx>=0.27",

    # Scheduling
    "apscheduler>=3.10",
    "pytz>=2024.2",

    # LLMs / embeddings
    "anthropic>=0.39",
    "voyageai>=0.3",

    # Market data
    "yfinance>=0.2.50",

    # Notifications (Pushover via httpx; Telegram via python-telegram-bot)
    "python-telegram-bot>=21.6",

    # Dashboard
    "streamlit>=1.40",
    "altair>=5.4",
    "pandas>=2.2",
    "numpy>=2.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "shap>=0.46",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipython>=8.29",
    "responses>=0.25",
]

[project.scripts]
fesi = "fesi.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fesi"]

[tool.hatch.build.targets.wheel.force-include]
"src/fesi/migrations" = "fesi/migrations"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C90"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
